/*
 * Copyright (C) 2018 Roman Vaivod
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#ifndef LTTLWHWHT_WIRE_H
#define LTTLWHWHT_WIRE_H

#include <cstdio>

class Wire {
  public:
    Wire(FILE * outputStream, FILE * errorStream):
         m_OutputStream(outputStream), m_ErrorStream(errorStream) {}
    FILE * getOutputStream() const;
    FILE * getErrorStream() const;
  private:
    FILE * m_OutputStream = NULL;
    FILE * m_ErrorStream = NULL;
};

#endif // LTTLWHWHT_WIRE_H